[package]
name = "serial_router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
base64 = "0.22.1"
serialport = "4.3.0"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4.4"
tokio-udp = "0.1.6"
